# pdf_Editor_v2

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  manage.py  mypy.ini  pyproject.toml  requirements.txt
.github/: DEPLOY.md  dependabot.yml
.github/workflows/: deploy.yml  test.yml
docker/: loki-config.yml  nginx.conf  prometheus.yml  promtail-config.yml
docs/: DR.md  LOAD_TESTING.md  RUNBOOK.md  SLOs.md  grafana-dashboard.json  observability.md
pdf_project/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
pdfeditor/: admin.py  ai_service.py  apps.py  auth_backends.py  email_utils.py  forms.py  metrics.py  mfa.py  middleware.py  models.py  netutils.py  objectstore.py  password_validators.py  pdf_processor.py  ratelimiting.py  scanning.py  signals.py  tasks.py  tests.py  tests_ai_service.py  tests_api.py  tests_auth.py  tests_cleanup.py  tests_common.py  tests_edit.py  tests_extract.py  tests_forms_processor.py  tests_jobs.py  tests_layout.py  tests_legal.py  tests_objectstore.py  tests_observability.py  tests_ops.py  tests_passkeys.py  tests_rag.py  tests_ratelimiting.py  tests_security.py  tests_sessions.py  tests_views.py  tests_webhooks.py  (+4 more)
scripts/: backup_db.sh  backup_media.sh  deploy.sh  load_test.js  notify_fail.sh  restore_drill.sh
sdk/: README.md  pyproject.toml
sdk/pdf_editor/: __init__.py  cli.py  client.py
sdk/tests/: test_cli.py  test_client.py
static/: manifest.webmanifest  offline.html  sw.js
(+224 files in other folders)
