[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-editor-sdk"
version = "0.1.0"
description = "Python client + CLI for the PDF Editor REST API."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "PDF Editor" }]
keywords = ["pdf", "api", "sdk", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Office/Business",
]
dependencies = [
    "requests>=2.28.0",
]

[project.scripts]
pdf-edit = "pdf_editor.cli:main"

[project.urls]
Homepage = "https://pdf.micutu.com"
Documentation = "https://pdf.micutu.com/api/v1/docs/"

[tool.setuptools.packages.find]
include = ["pdf_editor*"]
